<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Start Page -->
      
    <string name="app_name">CentennialGymTrainer</string>
    <string name="action_settings">Settings</string>
    <string name="btnStart">Start</string>
    <string name="logo">Logo</string>
    
    <!-- Login Page -->
    
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="logo1">Logo</string>
    <string name="txtuserName">User Name:</string>
    <string name="txtuserPass">Password:</string>
    <string name="txtfgpass">Forget Password</string>
   
    <!-- Login Page -->
    
    <string name="btnRSubmit">Submit</string>
    <string name="txtRole">Role:</string>
    <string name="txtEmail">Email ID:</string>
    <string name="txtfn">First Name:</string>
    <string name="txtln">Last Name:</string>
    
</resources>
